src/tui/render/snapshots/asqr__tui__render__screen__tests__an_empty_queue_says_so.snap
---
source: src/tui/render/screen.rs
expression: "screen(&App::default(), 80, 20)"
---
" asqr · queue: default · 0 sessions waiting                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"      Nothing to answer. New sessions show up here as soon as they arrive.      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" q  quit                                                                        "
