src/tui/render/snapshots/asqr__tui__render__screen__tests__an_empty_queue_still_shows_notices.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 80, 20)"
---
" asqr · queue: default · 0 sessions waiting                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"      Nothing to answer. New sessions show up here as soon as they arrive.      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"broken is invalid and was answered with an error: questions[0].min              "
" q  quit                                                                        "
