src/tui/render/snapshots/asqr__tui__render__screen__tests__an_empty_text_answer_without_focus_shows_a_dash.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 80, 24)"
---
" asqr · queue: default · 1 session waiting                                      "
" Release 0.2.0  (release script)                                                "
" Three decisions before the release. required questions block submit.           "
"   ☐ Go?  ☒ Channels  ☐ Highlights  ✔ Review                                    "
"────────────────────────────────────────────────────────────────────────────────"
" One sentence for the release notes:                                            "
" type your answer                                                               "
"                                                                                "
" ❯ ✎ —                                                                          "
"                                                                                "
" Notes: —                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑/↓  type   enter  next   ←/→  question   n  note   ?  help   q  quit          "
