src/tui/render/snapshots/asqr__tui__render__screen__tests__custom_entry.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 70, 16)"
---
" asqr · queue: default · 1 session waiting                            "
"plain                                                              1/1"
"──────────────────────────────────────────────────────────────────────"
"> q  -                │ ?                                             "
"                      │ pick one, or type your own with c             "
"                      │                                               "
"                      │ › ( ) 1 A                                     "
"                      │                                               "
"                      │ ┌ Own answer ───────────────────────────────┐ "
"                      │ │                                           │ "
"                      │ │                                           │ "
"                      │ │                                           │ "
"                      │ │                                           │ "
"                      │ └───────────────────────────────────────────┘ "
"                                                                      "
" esc  done                                                            "
