src/tui/render/snapshots/asqr__tui__render__screen__tests__editing_shows_the_field_and_its_counter.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 90, 24)"
---
" asqr · queue: default · 1 session waiting                                                "
"Release 0.2.0  (release script)                                                        3/3"
"──────────────────────────────────────────────────────────────────────────────────────────"
"  Go?  -                     │ One sentence for the release notes:                        "
"  Channels  default          │ type your answer with enter or c                           "
"> Highlights  -              │                                                            "
"                             │                                                            "
"                             │ Answer: —                                                  "
"                             │ Note: —                                                    "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │ ┌ Answer ──────────────────────────────────────── 42/120 ┐ "
"                             │ │Ship the queue watcher and the new format.              │ "
"                             │ │                                                        │ "
"                             │ │                                                        │ "
"                             │ │                                                        │ "
"                             │ └────────────────────────────────────────────────────────┘ "
"                                                                                          "
" esc  done                                                                                "
