src/tui/render/snapshots/asqr__tui__render__screen__tests__missing_image.snap
---
source: src/tui/render/screen.rs
expression: "screen(&with_image(\"/nonexistent/x.png\"), 80, 20)"
---
" asqr · queue: default · 1 session waiting                                      "
"pictured                                                                     1/1"
"────────────────────────────────────────────────────────────────────────────────"
"> q  -                   │ Which one?                                           "
"                         │ pick one                                             "
"                         │                                                      "
"                         │ › ( ) 1 This one                                     "
"                         │                                                      "
"                         │ Note: —                                              "
"                         │                                                      "
"                         │                                                      "
"                         │ image not shown                                      "
"                         │ /nonexistent/x.png                                   "
"                         │ No such file or directory (os error 2)               "
"                         │                                                      "
"                         │                                                      "
"                         │                                                      "
"                         │                                                      "
"                                                                                "
" j/k  move   space  select   c  own   n  note   tab  next   S  submit   ?  help "
